Create Neo4j functions